fix for cropped thumbnails in IE that are square

--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ ul.result-list li h3 { margin-bottom: 5px; }
 /* .cropped style uses background-size: cover when it can; older browsers
 	use javascript to resize/position the child img */
 .thumb.cropped {
+	background-color: #f7f7f7;
 	background-size: cover;
 	background-position: center center;
 	text-indent: -9999px;
